--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/main.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
     />
+    <link rel="stylesheet" href="./src/main.css" />
     <title>RP Alloys</title>
   </head>
   <body>
@@ -97,7 +97,7 @@
       <!-- Services Section -->
       <section class="service__wrapper">
         <div class="service__bg">
-          <img src="./Assests/service-bg.svg" alt="" />
+          <img src="./Assests/service-bg.jpg" alt="" />
         </div>
         <div class="service__content">
           <div class="title container">
@@ -223,7 +223,7 @@
       <section class="customer__wrapper">
         <div class="customer__section">
           <div class="bg__main">
-            <img src="./Assests/image2.svg" alt="image_2" />
+            <img src="./Assests/image2.jpg" alt="image_2" />
           </div>
           <div class="customer__content flex column">
             <div class="content flex column j-center container title">
@@ -381,8 +381,8 @@
       </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script type="module">
-      import Swiper from "https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.esm.browser.min.js";
+    <script src="./src/index.js" type="module">
+            import Swiper from "https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.esm.browser.min.js";
 
       const swiper = new Swiper(".swiper", {
         effect: "coverflow",
