--- a/index.html
+++ b/index.html
@@ -30,10 +30,7 @@
       <section class="home__wrapper container">
         <div class="home__container flex column">
           <div class="home__img">
-            <img
-              src="https://s3-alpha-sig.figma.com/img/d2f2/fd6e/373fea38506bf5e845f830ef61b622cc?Expires=1672012800&Signature=W4UbowkaCjvAyKPBRJPxhuGHba-2~V8HosQD3MQue~zVfEJFpBCO2d9nsLveolIsp9cXUl9EXuqSmQ3uIMCukTA6fwVB-fAAJMLVYt-UCqlrniwX3Xl-p4G7VAAj4BHsNPk7FY~UiaQgTczgk~d~Vsi0N-ZX-F1xTsRdU1b88~mQ2ls4g1fXU9HFwMssnPfV7v55zBxn8viOIooBnErm5kUBngFDkYbLxM6aPvh4ViJGEAxdbwDNbZlQ7QCKPUkm3v23IQsrZ4Kx~LymviLTVqenr8ehI5E3P94maBvFjkfNIGJBdIViVIMzIB~flVkhInM-QarMbDSP65Wf6xY-OA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4"
-              alt="hero__img"
-            />
+            <img src="./Assests/Hero img.png" alt="hero__img" />
           </div>
         </div>
         <div class="home__content">
