--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="home__wrapper container">
         <div class="home__container flex column">
           <div class="home__img">
-            <img src="./Assests/Hero img.png" alt="hero__img" />
+            <img src="./Assests/hero.png" alt="hero__img" />
           </div>
         </div>
         <div class="home__content">
