--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <section class="home__wrapper container">
         <div class="home__container flex column">
           <div class="home__img">
-            <img src="./Assests/hero.png" alt="hero__img" />
+            <img src="./Assests/Hero img.png" alt="hero__img" />
           </div>
         </div>
         <div class="home__content">
@@ -378,20 +378,6 @@
       </footer>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
-    <script src="./src/index.js" type="module">
-            import Swiper from "https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.esm.browser.min.js";
-
-      const swiper = new Swiper(".swiper", {
-        effect: "coverflow",
-        grabCursor: true,
-        centeredSlides: true,
-        slidesPerView: "auto",
-        spaceBetween: 32,
-        loop: true,
-        coverflowEffect: {
-          rotate: 2,
-        },
-      });
-    </script>
+    <script src="./src/index.js" type="module"></script>
   </body>
 </html>
